--- a/down.html
+++ b/down.html
@@ -64,6 +64,7 @@
 					<a href="assets/down/labeling.cpp" download="labeling.cpp">Regiões - Buracos</a><br>
 					<a href="assets/down/equalizador.cpp" download="equalizador.cpp">Equalizador</a><br>
 					<a href="assets/down/filtroespacial.cpp" download="filtroespacial.cpp">Filtro Espacial</a>
+					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Tiltshift</a>
 					
 				</div>
 
