--- a/u2.html
+++ b/u2.html
@@ -62,7 +62,7 @@
 					<p>Nesse exercícios resolveremos problemas de ilunação utilizando o filtro homomórfico</p>
 					<br>
 					<p>O filtro homomorfico será aplicado à imagem no domínio da frequência, portanto é necessário que a transformada de fourier seja aplicada na imagem. Para utilizar a transformada de fourier em uma imagem é preciso que ela assuma algumas características principalmente envolvendo o seu dimensionamento, esse ajustes podem ser verificados no código disponibilizado.</p>
-					<p>O Filtro homomórfico trabalha na reflectância e na iluminação da imagem separadamente através da expressão abaixo e suas constantes.
+					<p>O filtro trabalha na reflectância e na iluminação da imagem separadamente através da expressão abaixo e suas constantes.
 					<p><img class="img-responsive" src="assets/img/u2-1.png" alt=""></p>
 					<br>
 					
