--- a/u2.html
+++ b/u2.html
@@ -65,7 +65,9 @@
 					<p>O filtro trabalha na reflectância e na iluminação da imagem separadamente através da expressão abaixo e suas constantes.
 					<p><img class="img-responsive" src="assets/img/u2-1.png" alt=""></p>
 					<p>As constantes são ajustadas pelo usuário afim de atingir o resultado esperado.</p>
-					<br>
+					<p>Segue abaixo o trecho de código onde é feito o calculo do filtro:</p>
+					<p><img class="img-responsive" src="assets/img/u2-3.png" alt=""></p>
+					<br>			
 					<p>Segue abaixo a imagem antes e depois do filtro:</p>
 					<p><img class="img-responsive" src="assets/img/u2-2.png" alt=""></p>
 				
