--- a/down.html
+++ b/down.html
@@ -65,6 +65,8 @@
 					<a href="assets/down/equalizador.cpp" download="equalizador.cpp">Equalizador</a><br>
 					<a href="assets/down/filtroespacial.cpp" download="filtroespacial.cpp">Filtro Espacial</a><br>
 					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Tiltshift</a>
+					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Filtro Homomórfico</a>
+					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Pontilhismo</a>
 					
 				</div>
 
