--- a/down.html
+++ b/down.html
@@ -64,8 +64,8 @@
 					<a href="assets/down/labeling.cpp" download="labeling.cpp">Regiões - Buracos</a><br>
 					<a href="assets/down/equalizador.cpp" download="equalizador.cpp">Equalizador</a><br>
 					<a href="assets/down/filtroespacial.cpp" download="filtroespacial.cpp">Filtro Espacial</a><br>
-					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Tiltshift</a>
-					<a href="assets/down/tiltshift.cpp" download="freq.cpp">Filtro Homomórfico</a>
+					<a href="assets/down/tiltshift.cpp" download="tiltshift.cpp">Tiltshift</a><br>
+					<a href="assets/down/tiltshift.cpp" download="freq.cpp">Filtro Homomórfico</a><br>
 					<a href="assets/down/tiltshift.cpp" download="pont.cpp">Pontilhismo</a>
 					
 				</div>
