--- a/u2.html
+++ b/u2.html
@@ -78,7 +78,7 @@
 					<p>Limiar de bordas escolhido e onde será aplicado o pontilhismo novamente:</p>
 					<p><img class="img-responsive" src="assets/img/u2-4.png" alt=""></p>
 					<p>Pontilhismo sem Canny</p>
-					<p><img class="img-responsive" src="assets/img/u2-5.png" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/u2-5.jpg" alt=""></p>
 					<p>Pontilhismo com Canny</p>
 					<p><img class="img-responsive" src="assets/img/u2-6.png" alt=""></p>
 					
